--- a/Filterizr-master/demo/index.css
+++ b/Filterizr-master/demo/index.css
@@ -2,9 +2,9 @@
     margin-top: 1rem;
 } */
 .filtr-item {
-    padding: 1rem;
+    padding: 10px 10px 10px 5px;
 }
-.item-desc {
+/* .item-desc {
     background-color: rgba(0,0,0,0.5);
     color: white;
     position: absolute;
@@ -15,7 +15,7 @@
     bottom: 1rem;
     left: 1rem;
     right: 1rem;
-}
+} */
 
 /* Filter controls */
 .simplefilter, .multifilter, .sortandshuffle, .search-row {
@@ -33,7 +33,7 @@
     font-weight: 400;
     font-size: 14px;
     padding: 10px 20px;
-    margin: 0;
+    margin: 0 auto;
 }
 
 .simplefilter {
