--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -22,6 +22,7 @@ a {
   letter-spacing: 2px;
   color: white;
   text-decoration: none;
+  display: block;
 }
 
 .logo {
@@ -47,7 +48,7 @@ a {
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 2;
+  /* z-index: 2; */
 }
 
 video {
@@ -59,5 +60,11 @@ min-width: 100%;
 min-height: 100%;
 width: auto;
 height: auto;
-z-index: 1;
+display: block;
+/* z-index: 1; */
+}
+.content {
+  width: auto;
+  /* height: 100%; */
+  background-color: rgba(26, 39, 51, 0.9);
 }
