--- a/slick-master/slick/slick.css
+++ b/slick-master/slick/slick.css
@@ -52,7 +52,7 @@
 {
     position: relative;
     top: 0;
-    left: 0;
+    left: 41px;
 
     display: block;
     margin-left: auto;
@@ -78,7 +78,6 @@
 {
     display: none;
     float: left;
-
     height: 100%;
     min-height: 1px;
 }
