--- a/assets/stylesheets/tour.css
+++ b/assets/stylesheets/tour.css
@@ -14,9 +14,9 @@ h1{
 
 a {
   font-family: 'Roboto', sans-serif;
-  font-size: 20px;
-  font-weight: 200;
-  letter-spacing: 2px;
+  font-size: 17px;
+  /* font-weight: 200; */
+  /* letter-spacing: 2px; */
   color: white;
   text-decoration: none;
 }
