--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -3,8 +3,19 @@ body {
 }
 
 h1{
+  font-family: 'Nunito', sans-serif;
+  color: #dcdbe3;
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 15px;
+}
+
+p {
   font-family: 'Roboto', sans-serif;
-  color: #f5924b;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 15px;
+  color: #dcdbe3;
 }
 
 html, body {
@@ -48,7 +59,7 @@ a {
   position: fixed;
   top: 0;
   width: 100%;
-  /* z-index: 2; */
+  z-index: 2;
 }
 
 video {
@@ -61,7 +72,7 @@ min-height: 100%;
 width: auto;
 height: auto;
 display: block;
-/* z-index: 1; */
+z-index: 1;
 }
 .content {
   width: auto;
