--- a/assets/stylesheets/media.css
+++ b/assets/stylesheets/media.css
@@ -51,36 +51,65 @@ a {
   z-index: 1
 }
 
+.picture {
+  margin: 0
+}
+
 button {
   /* display: block; */
   background: none;
   border: none;
+  cursor: pointer;
 }
 
 .row {
   display: flex;
   flex-wrap: wrap;
-  margin-left: -10px;
-  margin-top: -10px;
+  padding: 0 0 0 50px;
 }
 
 /* Create four equal columns that sits next to each other */
-.row .column {
-  flex: 550px 400px 400px;
-  max-width: 550px 400px 400px;
+.column {
   flex: 3;
-  max-width: 32%
-  padding: 0 4px;
-  flex: 1 0 25%;
-  box-sizing: border-box;
-  padding: 0 4px;
+  padding: 30px 0 30px 0;
+  /* flex: 32%; */
+  /* box-sizing: border-box; */
 }
 
-  .column img {
-  margin-top: 8px;
-  vertical-align: middle;
-} 
+.gallery {
+  /* display: block; */
+  /* position: absolute; */
+  left: 0;
+  right: 0;
+  margin: 0 auto 25px;
+  border-radius: 4px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+}
 
-.picture {
-  margin: 0
+.gallery:hover {
+  width: 405px;
+  height: 285px;
+  border-radius: 5px;
+  z-index: 10;
+  box-shadow: 0 50px 125px rgba(0, 0, 0, 0.4);
+}
+
+img {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+}
+
+img:hover {
+  width: 263px;
+  height: 150px;
+  border-radius: 5px;
+  z-index: 10;
+  box-shadow: 0 50px 125px rgba(0, 0, 0, 0.4);
+}
+
+.gallery > img {
+  width: 100%;
+  height: 100%;
 }
