--- a/assets/stylesheets/product-details.css
+++ b/assets/stylesheets/product-details.css
@@ -29,7 +29,7 @@ a {
 .logo {
     display: block;
     margin: 0 auto;
-    padding: 10px;
+    /* padding: 10px; */
 }
 
 .navbar-start {
@@ -86,7 +86,7 @@ ul {
   margin: 0 0 10px 0;
 }
 
-img {
+.product-pic {
   margin: 75px 20px 150px 20px;
   /* padding: 75px 75px 150px 30px; */
   border-radius: 4px;
