--- a/assets/stylesheets/shop.css
+++ b/assets/stylesheets/shop.css
@@ -109,10 +109,10 @@ a {
 }
 
 button {
-  background-color: rgba(255,255,255,0)
+  background: none;
   border: none;
   border-radius: 3px;
-  color: #3a4281;
+  color: white;
   padding: 5px 11px;
   text-align: center;
   text-decoration: none;
@@ -121,7 +121,4 @@ button {
   font-weight: 400;
   letter-spacing: 2px;
   font-family: 'Roboto', sans-serif;
-}
-button:hover {
-  box-shadow: 0 8px 10px 0 rgba(0,0,0,0.24), 0 8px 25px 0 rgba(0,0,0,0.19);
 }
