--- a/assets/stylesheets/product-details.css
+++ b/assets/stylesheets/product-details.css
@@ -3,16 +3,24 @@ body {
 }
 
 h1{
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Fredericka the Great', cursive;
   color: #dcdbe3;
   font-weight: 400;
+  font-size: 24px;
+  line-height: 26px;
+}
+
+h2 {
+  font-family: 'Roboto', sans-serif;
   font-size: 21px;
+  font-weight: 400;
   line-height: 15px;
+  color: #dcdbe3;
 }
 
 p {
   font-family: 'Roboto', sans-serif;
-  font-size: 15px;
+  font-size: 14px;
   font-weight: 200;
   line-height: 15px;
   color: #dcdbe3;
