--- a/assets/stylesheets/tour.css
+++ b/assets/stylesheets/tour.css
@@ -7,16 +7,15 @@ h1{
   font-family: 'Nunito', sans-serif;
   color: #dcdbe3;
   font-weight: 400;
-  /* font-style: italic; */
   font-size: 21px;
   line-height: 6px;
 }
 
-a {
+.navbar-item {
   font-family: 'Roboto', sans-serif;
-  font-size: 17px;
-  /* font-weight: 200; */
-  /* letter-spacing: 2px; */
+  font-size: 20px;
+  font-weight: 200;
+  letter-spacing: 2px;
   color: white;
   text-decoration: none;
 }
@@ -47,6 +46,13 @@ a {
   background-color: rgba(26, 39, 51, 0.9);
 }
 
+.tickets {
+  font-family: 'Roboto', sans-serif;
+  font-size: 17px;
+  color: white;
+  text-decoration: none;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
@@ -64,7 +70,7 @@ table {
 th {
     height: 50px;
     letter-spacing: 2px;
-    font-family: 'Roboto Slab', sans-serif;
+    font-family: 'Fredericka the Great', cursive;
     font-weight: 400;
     font-size: 20px;
     padding: 10px 20px 10px 20px;
